Add AdditionalFields to NLogTarget and parsing to add the fields to the log message

--- a/ConsoleRunner/App.config
+++ b/ConsoleRunner/App.config
@@ -21,6 +21,7 @@
               hostip="192.168.1.12" 
               hostport="12201" 
               Facility="console-runner"
+              AdditionalFields="app:Gelf4NLog.ConsoleRunner,environment:local"
       />
     </targets>
 
